--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-4">
-                <div class="bg-secondary-subtle p-3 border border-secondary">
+                <div class="bg-secondary-subtle p-3 border border-secondary rounded">
                     <h2>Película</h2>
                     <input type="text" placeholder="Escribir título..." class="form-control">
                     <button class="btn btn-success mt-2" id="botonPelicula">Buscar película</button>
                 </div>
             </div>
             <div class="col-8">
-                <div class="bg-secondary-subtle p-3 border border-secondary">
+                <div class="bg-secondary-subtle p-3 border border-secondary rounded">
                     <div id="principal">
                         <h1>Buscador de películas</h1>
                         <p>Escribí el título de la película (en inglés) y obtené información sobre la misma.</p>
