--- a/index.html
+++ b/index.html
@@ -20,15 +20,27 @@
                     <button class="btn btn-success mt-2" id="botonPelicula">Buscar película</button>
                 </div>
             </div>
+            <!-- <div class="col-8" id="error">
+                <div class="bg-warning-subtle p-3 border border-warning rounded text-center">
+                    <div>
+                        <p class="fs-4">Lo sentimos, no pudimos encontrar una película con ese nombre.</p>
+                    </div>
+                </div>
+            </div> -->
             <div class="col-8">
-                <div class="bg-secondary-subtle p-3 border border-secondary rounded">
+                <div class="bg-secondary-subtle p-3 border border-secondary rounded" id="divDerecha">
                     <div id="principal">
                         <h1>Buscador de películas</h1>
                         <p>Escribí el título de la película (en inglés) y obtené información sobre la misma.</p>
-                        <p>Este servicio funciona gracias a la API de <a href="">OMDB</a> que retorna información sobre
+                        <p>Este servicio funciona gracias a la API de <a
+                                href="https://private.omdbapi.com/?apikey=bef9c583&t=">OMDB</a> que retorna información
+                            sobre
                             las
                             películas en
                             formato JSON.</p>
+                    </div>
+                    <div id="error">
+                        <p class="fs-4">Lo sentimos, no pudimos encontrar la película solicitada.</p>
                     </div>
                     <div class="row">
                         <div class="col-4">
@@ -55,6 +67,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
